# Pebicoin

./: .gitignore  CMakeLists.txt
gui_wallet/: CMakeLists.txt
gui_wallet/src/: main.cpp  mainwindow.cpp  mainwindow.h  transactionmodel.cpp  transactionmodel.h  walletmodel.cpp  walletmodel.h
gui_wallet/ui/: mainwindow.ui  resources.qrc
gui_wallet/ui/styles/: dark.qss  light.qss
pebiminer/: main.cpp
src/: block.cpp  block.h  blockchain.cpp  blockchain.h  config.h  hasher.cpp  hasher.h  main.cpp  miner.cpp  miner.h  seeds.h  utils.cpp  utils.h
wallet/: README.md  address.cpp  address.h  base58.cpp  base58.h  crypto_utils.cpp  crypto_utils.h  hasher.cpp  hasher.h  keys.cpp  keys.h  main.cpp  signer.cpp  signer.h  simple_test.cpp  simple_test_permission.txt  simple_wallet.cpp  simple_wallet_impl.cpp  test_file_creation.cpp  test_wallet_direct.cpp  transaction.cpp  transaction.h  wallet.cpp  wallet.h
